fixed overview img cropping

--- a/tools/static/css/category.css
+++ b/tools/static/css/category.css
@@ -6,8 +6,12 @@
 }
 .category-image img{
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
+  margin: auto;
+  height: 100%;
 }
 
 .category-description{
